5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1764_672.log
== TEST (2019-05-21 16:42:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input(array("Repeticoes: "))
		 
		 
-- ERROR:
File "XXXX", line 7
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:42:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input(array("Repeticoes: "))
		 
		 
-- ERROR:
File "XXXX", line 7
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:42:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input(array("Repeticoes: "))
		 
		 
-- ERROR:
File "XXXX", line 7
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:50:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = array[ones] * n

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:50:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = array[ones] * n

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:54:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:54:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- EXECUTION TIME:
0.479798
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:55:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:55:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("Repeticoes: "))

vet = ones(n, dtype=int)

print(vet)
		 
		 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
